# Livraria2

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: ux-shadcn.md
.githooks/: pre-commit
.github/workflows/: release.yml  wasm.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/escritorio/: .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  stack.yml  tsconfig.tsbuildinfo
crates/livraria-domain/: Cargo.toml
crates/livraria-domain-wasm/: Cargo.toml
crates/livraria-domain-wasm/src/: lib.rs
crates/livraria-domain/src/: alocacao.rs  destinacao.rs  erros.rs  estoque.rs  lancamento.rs  lib.rs  livro.rs  pedido.rs  sincronizacao.rs  texto.rs  turno_operacao.rs  usuario.rs
crates/livraria-domain/tests/: conformance.rs
docs/: DEPLOY.md  deploy-007.md  sync.example.json
docs/adr/: 0001-persistencia-sqlite.md  0002-nucleo-rust-hexagonal.md  0003-orm-seaorm.md  0004-migrations-idempotentes.md  0005-dinheiro-em-centavos.md  0006-import-legado-idempotente.md  0007-guardrails-hooks-skills.md  0008-razao-movimentos-estoque.md  0009-custo-medio-ponderado.md  README.md  (+14 more)
scripts/: check-domain-purity.sh  check-file-size.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: importar.rs
src-tauri/src/: commands.rs  commands_destinacao.rs  commands_estoque.rs  commands_formas.rs  commands_fornecedor.rs  commands_inventario.rs  commands_lancamento.rs  commands_sync.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs  relogio.rs
src-tauri/src/adapters/legado/: mapeamentos.rs  mdb_importer.rs  mod.rs
src-tauri/src/adapters/nuvem/: mod.rs  supabase_sync.rs
src-tauri/src/adapters/persistencia/: dashboard_repo.rs  destinacao_repasse_sql.rs  destinacao_repo.rs  destinacao_sql.rs  estoque_repo.rs  estoque_sql.rs  forma_pagamento_repo.rs  fornecedor_repo.rs  inventario_relatorio_sql.rs  inventario_repo.rs  inventario_sql.rs  lancamento_repo.rs  lancamento_sql.rs  livro_repo.rs  mod.rs  pagamento_pedido_sql.rs  pedido_repo.rs  pedido_sql.rs  recompute.rs  relatorio_repo.rs  replica_mapa.rs  replica_sync.rs  turno_repo.rs  usuario_repo.rs
src-tauri/src/adapters/persistencia/entities/: destinacao.rs  forma_pagamento.rs  fornecedor.rs  item_contagem.rs  item_lancamento.rs  item_pedido.rs  lancamento_entrada.rs  livro.rs  mod.rs  movimento_estoque.rs  pagamento_pedido.rs  pedido.rs  pendencia_cadastro.rs  sessao_inventario.rs  usuario.rs
src-tauri/src/application/: ajuste.rs  cadastro.rs  cancelamento.rs  dashboard.rs  destinacoes.rs  entrada.rs  erros.rs  estoque_setup.rs  extrato.rs  fakes.rs  formas_pagamento.rs  fornecedores.rs  inventario.rs  lancamentos.rs  migracao.rs  mod.rs  pesquisa.rs  ports.rs  ports_compras.rs  ports_destinacao.rs  ports_estoque.rs  ports_inventario.rs  ports_sync.rs  ports_turno.rs  relatorios.rs  sincronizacao.rs  turno.rs  venda.rs
src-tauri/src/domain/: categoria.rs  dinheiro.rs  erros.rs  estoque.rs  fornecedor.rs  inventario.rs  livro.rs  mod.rs  pagamento.rs  pedido.rs  sincronizacao.rs  texto.rs
src-tauri/src/migration/: m004.rs  m006.rs  m007.rs  m008.rs  m009.rs  m010.rs  mod.rs
src-tauri/tests/: debug_prod_sync.rs  destinacao_consumo.rs  destinacao_repo.rs  estoque_repo.rs  forma_pagamento_repo.rs  fornecedor_repo.rs  inventario_repo.rs  lancamento_repo.rs  livro_repo.rs  migracao.rs  migracao_m004.rs  migracao_m006.rs  migracao_m007.rs  migration.rs  pedido_repo.rs  replica_venda.rs  sync_e2e.rs  venda.rs
(+238 files in other folders)
