[package]
name = "livraria-2"
version = "0.1.0"
description = "Livraria 2 — Sistema de estoque & vendas (Espaço do Livro)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "livraria_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Domínio puro extraído (ADR-0022): reusado pelo PDV (nativo) e pelo Escritório (WASM).
livraria-domain = { path = "../crates/livraria-domain" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1"
sha2 = "0.10"
# Hash de senha forte (salgado/lento), compatível com pgcrypto bcrypt na nuvem — ADR-0019
bcrypt = "0.15"
# Feature 007: sincronização com a nuvem (adapter Supabase/PostgREST) — ADR-0015
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }

