# Ponte WASM do domínio (ADR-0022): expõe as regras puras para o Escritório (JS).
# Não reimplementa nada — só embrulha `livraria-domain`.
[package]
name = "livraria-domain-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
livraria-domain = { path = "../livraria-domain" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
